impl/base/resources/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: knight-light-route
spec:
  hosts:
  - "knight-light.batcave-impl.internal.cms.gov"
  gateways:
  - "istio-system/main"
  http:
  - match:
    - uri:
        prefix: "/"
    - uri:
        exact: "/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knight-light-ui.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/mono-frontend/"
    - uri:
        exact: "/mono-frontend"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knight-light-mono-frontend.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/mono-chat-api/"
    - uri:
        exact: "/mono-chat-api"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knight-light-mono-chat-api.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/mono-counter-api/"
    - uri:
        exact: "/mono-counter-api"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knight-light-mono-counter-api.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/sitestream/"
    - uri:
        exact: "/sitestream"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: sitestream.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/go-api/"
    - uri:
        exact: "/go-api"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knight-light-server-go.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/java-api/"
    - uri:
        exact: "/java-api"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knight-light-server-java.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/nodejs-api/"
    - uri:
        exact: "/nodejs-api"
    rewrite:
      uri: "/"
    route:
      - destination:
          host: knight-light-server-nodejs.knight-light.svc.cluster.local
  - match:
    - uri:
        prefix: "/sso"
    rewrite:
        uri: /
    route:
    - destination:
        host: knight-light-sso.knight-light.svc.cluster.local 
  - match:
    - uri:
        prefix: "/flask-api/"
    - uri:
        exact: "/flask-api"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: knight-light-server-flask.knight-light.svc.cluster.local
  - route:
    - destination:
        host: knight-light-ui.knight-light.svc.cluster.local
